# achievement_platform

./: .gitignore  README.md  project_structure.md  信息网络安全学院学生成果登记与管理系统项目管理手册.md
backend/: .env.example  README.md  pyproject.toml
backend/src/app/: __init__.py  config.py  run.py
backend/src/app/models/: __init__.py  achievement.py  audit_log.py  class_model.py  system_config.py  user.py
backend/src/app/routes/: __init__.py  admin.py  auth.py  config.py  leader.py  public.py  student.py  upload.py
backend/src/scripts/: init_database.py
frontend/: package-lock.json  package.json  vue.config.js
frontend/public/: index.html
frontend/src/api/: auth.js  public.js  student.js
frontend/src/router/: index.js
frontend/src/stores/: config.js
frontend/src/utils/: request.js
frontend/src/views/: Display.vue  Home.vue  Layout.vue  Login.vue  Profile.vue  Register.vue
frontend/src/views/admin/: Dashboard.vue  Monitor.vue
frontend/src/views/leader/: Audit.vue  Dashboard.vue  Manage.vue
frontend/src/views/student/: Achievements.vue  CreateAchievement.vue  Dashboard.vue
scripts/: inspect_excel.py  start_all.sh  start_backend.bat  start_backend.sh  start_frontend.bat  start_frontend.sh
